# espAGC

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  HANDOFF.md  LICENSE  README.md  partitions.csv  sdkconfig.defaults  sdkconfig.qemu
boards/board_cyd_2432s028/: CMakeLists.txt  Kconfig.projbuild  board_init.c
boards/board_cyd_2432s028/include/: board_pins.h
components/agc_core/: CMakeLists.txt  agc_init.c  io_callbacks.c  posix_shim.c
components/agc_core/include/: agc_core.h
components/apollo_rom/: CMakeLists.txt  apollo_rom.c
components/apollo_rom/include/: apollo_rom.h
components/board_tdongle_c5/: CMakeLists.txt  board_init.c
components/board_tdongle_c5/include/: board_pins.h
components/channel_router/: CMakeLists.txt  Kconfig.projbuild  channel_router.c
components/channel_router/include/: channel_router.h  dsky_keys.h  dsky_state.h
components/display_hal/: CMakeLists.txt  display_hal.c  dsky_keypad_320x240.c  dsky_layout.c  dsky_render_320x240.c  font5x7.c  font5x7.h  idf_component.yml  panel_ili9341.c  panel_st7789.c  st7735_panel.c
components/display_hal/include/: display_hal.h  display_panel_iface.h  dsky_keypad_320x240.h  dsky_layout.h  ili9341_panel.h  st7735_panel.h  st7789_panel.h
components/dsky_input/: CMakeLists.txt  Kconfig.projbuild  dsky_input.c  key_parse.c  usb_cdc_input.c  wifi_input.c
components/dsky_input/include/: dsky_input.h
components/dsky_input/web/: index.html
components/led_status/: CMakeLists.txt  apa102_status.c  rgb_gpio.c
components/led_status/include/: led_status.h  led_status_iface.h  rgb_gpio.h
components/peripheral_stub/: CMakeLists.txt  peripheral_stub.c
components/peripheral_stub/include/: peripheral_stub.h
components/sequences/: CMakeLists.txt  sequences.c
components/sequences/include/: sequences.h
components/touch_input/: CMakeLists.txt  Kconfig.projbuild  cst820.c  touch_input.c  xpt2046.c
components/touch_input/include/: cst820.h  panel_touch_iface.h  touch_input.h  xpt2046.h
components/yaagc_socket/: CMakeLists.txt  Kconfig.projbuild  yaagc_socket.c
components/yaagc_socket/include/: yaagc_socket.h
docs/: NEXT_SESSION.md  SESSION_NOTES.md
docs/superpowers/plans/: 2026-05-09-cyd-board-support.md  2026-05-10-prog-alarm-watchdog.md
docs/superpowers/specs/: 2026-05-09-cyd-board-support-design.md  2026-05-10-prog-alarm-watchdog-design.md
main/: CMakeLists.txt  app_main.c
tests/host/: Makefile  agc_harness.c  agc_harness.h  capture_one.sh  capture_with_dumps.sh  compare_channels.sh  compare_dumps.py  find_symbol.c  hardware_reliability_test.py  host_reliability_test.sh  parse_core_dump.py  probe_lr_altitude.py  probe_seqs.sh  probe_uprupt.py  probe_uprupt2.py  probe_v71_state_vector.py  ref_capture.py  test_accsokay_fix.c  test_accsokay_wait.c  test_alarm_at_boot.c  test_auto_rset_at_boot.c  test_cadr_resolution.c  test_cadrstor_when_charin.c  test_canonical_match.c  test_ch010_writes.c  test_channel10_emit.c  test_charin_arrival.c  test_charin_dispatch.c  test_charin_real_trace.c  test_charin_state.c  test_charin_timeline.c  test_charin_trace.c  test_charin_verify.c  test_check_restart.c  test_delayed_rset_keypress.c  test_dsptab_dump.c  test_dump_exec_state.c  test_early_verb.c  test_early_verb_trace.c  test_engine_boot.c  (+69 more)
tests/host/golden/: README.md
tests/host/include/: esp_log.h
tests/host/include/freertos/: FreeRTOS.h  semphr.h  task.h
tests/host/wsl_dumps/ref/: core.000  core.001  core.002  core.003  core.004  core.005  core.006  core.007  core.008  core.009  core.010  core.012  core.013  core.014  core.015  core.016  core.017  core.018  core.019  core.020  core.021  core.022  core.023  core.024  core.025  core.026  dump_cycles.tsv
tools/: assemble_rom.cmake  build_yayul.cmake  qemu.gdbinit  qemu_drive.py  qemu_gdb_drive.py  qemu_run_with_keys.ps1  web_test_server.py  yaagc_win_stubs.c
tools/yayul_host_project/: CMakeLists.txt
